# yolov11_pose_tracking

./: README.MD  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: yolov11_pose_tracking.launch.py
yolov11_pose_tracking/: YOLO_Pose.py  botsort.txt  yolov11_pose_track copy.py  yolov11_pose_track.py
